custom.css
p {
  color: #000;
  font-size: 1.1em;
  font-family: "Open Sans";
  font-weight: 300;
  padding-left: 10px;
}

a {
  color: #1A237E;
  font-weight: 600;
}

a:visited {
  color: #5C6BC0;
  font-weight: 500;
}

.selectize-input {
  border-radius: 2px !important;
}

.navbar-inverse .navbar-nav>li>a:hover,
.navbar-inverse .navbar-nav>li>a:focus {
  background-color: #616161;
  color: #ffffff;
}

.navbar-brand {
  font-size: 1.5em;
  font-weight: 800;
}

.navbar-author {
  font-size: 0.7em;
  font-weight: 600;
}

/*This is the navbar...*/
.container-fluid {
  background-color: #000;
  color: #f2f2f2;
}

.section.sidebar {
  background-color: #f2f2f2;
  border: 0 solid transparent;
}

.shiny-input-panel {
  background-color: #f2f2f2;
  border: 0 solid transparent;
  margin-top: 0;
  margin-bottom: 0;
  padding: 1px 8px;
}

.help-block {
  padding-left: 10px;
}

.chart-title {
  border-top: 0 solid #f2f2f2;
  border-bottom: 2px solid #f2f2f2;
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
  font-size: 1.1em;
}

.chart-wrapper .chart-notes {
  background-color: #fff;
  border-top: 1px solid #f2f2f2;
  border-bottom: 0 solid #f2f2f2;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #212121;
}

